# sunstone-2d

./: CMakeLists.txt  clean.bat  clean.sh  game.cpp  install.bat  install.sh  main.frag  main.vert
win_ctx/: game.cpp  game.h  glext.h  ogl.cpp  ogl.h  win.cpp
